tests/fixtures/invalid/bool_pow_str.py
# Cannot power Bool and Str
x: bool = True ** "hello"
